server.log

> tcgtrade-app@1.0.0 start
> node server.js

🚀 Railway Server iniciado en puerto 3000
🔑 API Key configurada: NO
🌐 Servidor listo para recibir peticiones
📅 Deploy timestamp: 2025-09-03T09:14:46.291Z
🔧 Profile section fix applied
🚀 FORCING NEW DEPLOY - Profile section should be available
🔧 Login button debug logs added
🎌 ENDPOINT TCGDEX SETS LLAMADO - VERSION JAPONESA
🔍 Iniciando obtención de sets TCGdex...
✅ TCGdex SDK importado correctamente
🇯🇵 Sets japoneses obtenidos: 174
🇯🇵 Ejemplo de set japonés: {
  id: 'PMCG1',
  name: '拡張パック',
  cardCount: { total: 102, official: 102 }
}
(node:18763) Warning: Failed to load the ES module: /workspace/js/tcgdex-translations.js. Make sure to set "type": "module" in the nearest package.json file or use the .mjs extension.
(Use `node --trace-warnings ...` to show where the warning was created)
Error en TCGdex sets endpoint: /workspace/js/tcgdex-translations.js:2
export const setTranslations = {
^^^^^^

SyntaxError: Unexpected token 'export'
    at wrapSafe (node:internal/modules/cjs/loader:1662:18)
    at Module._compile (node:internal/modules/cjs/loader:1704:20)
    at Object..js (node:internal/modules/cjs/loader:1895:10)
    at Module.load (node:internal/modules/cjs/loader:1465:32)
    at Function._load (node:internal/modules/cjs/loader:1282:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:235:24)
    at cjsLoader (node:internal/modules/esm/translators:266:5)
    at ModuleWrap.<anonymous> (node:internal/modules/esm/translators:200:7)
    at ModuleJob.run (node:internal/modules/esm/module_job:274:25)
